--- a/app/title.css
+++ b/app/title.css
@@ -17,13 +17,15 @@
         margin: 0;
 
         text-align: center;
-        /* font-family: "Milletun"; */
-        font-size: 18vw;
 
-        @media @screen(sm) {
-            margin-left: 4vw;
-            margin-top: -10vh;
-            font-size: 100vw;
+        margin-left: 4vw;
+        margin-top: -10vh;
+        font-size: 50vh;
+
+        @media screen(md) {
+            margin-left: 0;
+            margin-top: 0;
+            font-size: 18vw;
         }
 
         color: transparent;
@@ -32,7 +34,6 @@
         background-attachment: fixed;
 
         background-size: 32px 32px;
-
         animation: background-scroll 1s linear infinite, fade-in 4s linear 1 1s backwards;
 
         /* Scale the background animation based on pixel density */
@@ -50,24 +51,5 @@
             text-shadow: 1px 1px #0ff, 2px 2px #0ff, 3px 3px #0ff, 4px 4px #0ff;
             /* animation: fade-in-cyan-shadow 1s linear 1 5s backwards; */
         }
-    }
-}
-
-
-@keyframes background-scroll {
-    from {
-        background-position: 0 0;
-    }
-    to {
-        background-position: 32px 32px;
-    }
-}
-
-@keyframes fade-in-cyan-shadow {
-    from {
-        text-shadow: 1px 1px #0ff0, 2px 2px #0ff0, 3px 3px #0ff0, 4px 4px #0ff0;
-    }
-    to {
-        text-shadow: 1px 1px #0ff, 2px 2px #0ff, 3px 3px #0ff, 4px 4px #0ff
     }
 }
