--- a/components/header.css
+++ b/components/header.css
@@ -1,5 +1,3 @@
-
-
 .intro-header {
     --title-bg-img: url("/images/title-tile.png");
 
@@ -16,8 +14,28 @@
 
         margin: 0;
 
-        text-align: center;
+        color: transparent;
+        background-clip: text;
+        background-image: var(--title-bg-img);
+        background-attachment: fixed;
 
+        background-size: 16px 16px;
+        image-rendering: pixelated;
+        animation: background-scroll 2s linear infinite;
+
+        & > span {
+            position: absolute;
+            left: 0;
+            right: 0;
+            z-index: -1;
+
+            text-shadow: 1px 1px #0ff, 2px 2px #0ff;
+        }
+    }
+}
+
+.intro-header-full {
+    & > h1 {
         margin-left: 4vw;
         margin-top: -10vh;
         font-size: 50vh;
@@ -27,11 +45,6 @@
             margin-top: 0;
             font-size: 18vw;
         }
-
-        color: transparent;
-        background-clip: text;
-        background-image: var(--title-bg-img);
-        background-attachment: fixed;
 
         background-size: 32px 32px;
         animation: background-scroll 1s linear infinite;
@@ -43,13 +56,7 @@
         }
 
         & > span {
-            position: absolute;
-            left: 0;
-            right: 0;
-            z-index: -1;
-
             text-shadow: 1px 1px #0ff, 2px 2px #0ff, 3px 3px #0ff, 4px 4px #0ff;
-            /* animation: fade-in-cyan-shadow 1s linear 1 5s backwards; */
         }
     }
 }
