--- a/app/globals.css
+++ b/app/globals.css
@@ -100,6 +100,10 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+.sticky-fix {
+  height: 0 !important;
+}
+
 
 /* Animations */
 @keyframes fade-in {
