--- a/app/drift-king/page.css
+++ b/app/drift-king/page.css
@@ -1,3 +1,3 @@
 body {
-    background-image: radial-gradient(ellipse at top, rgb(173, 43, 71), rgb(67, 1, 139));
+    background-image: radial-gradient(circle at top, rgb(173, 43, 71), rgb(67, 1, 139));
 }
