--- a/components/header.css
+++ b/components/header.css
@@ -43,7 +43,7 @@
         @media screen(md) {
             margin-left: 0;
             margin-top: 0;
-            font-size: 18vw;
+            font-size: 40vh;
         }
 
         background-size: 32px 32px;
